[package]
name = "dcc-server"
version = "0.1.0"
edition = "2021"
authors = ["Christian <chriamue@gmail.com>"]
description = "DCC Server"
repository = "https://github.com/rusty-rails/dcc-server"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = [
    "swagger",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"